Переделана структура мобильного меню

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -221,80 +221,39 @@ ul {
   #header .mobile_menu {
     background-color: #4a5054;
     width: 100%; }
-    #header .mobile_menu #mob_menu {
-      padding: 10px;
-      -webkit-border-radius: .3em;
-              border-radius: .3em; }
-      #header .mobile_menu #mob_menu .item {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
-        color: #fff;
+    #header .mobile_menu ul {
+      padding: 2px;
+      background-color: #fff;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      -webkit-border-radius: 3px;
+              border-radius: 3px;
+      -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+              box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+      #header .mobile_menu ul li {
+        display: inline-block;
+        padding: 5px 15px;
         background-color: #396B62;
-        padding-left: 15px;
-        padding-top: 7px;
-        padding-bottom: 7px;
-        padding-right: 10px;
-        width: 100%;
         border-bottom: 1px dotted #fff;
+        width: 100%;
         cursor: pointer;
-        text-transform: uppercase;
-        font-size: 16px; }
-        #header .mobile_menu #mob_menu .item:hover {
-          color: yellow; }
-        #header .mobile_menu #mob_menu .item a {
+        text-transform: uppercase; }
+        #header .mobile_menu ul li:last-child {
+          border-bottom: none; }
+        #header .mobile_menu ul li a {
           display: block;
+          width: 100%;
           color: #fff;
-          text-decoration: none;
-          width: 100%; }
-          #header .mobile_menu #mob_menu .item a:hover {
+          text-decoration: none; }
+          #header .mobile_menu ul li a:hover {
             color: yellow; }
-      #header .mobile_menu #mob_menu .collapse {
-        background-color: #4EC698; }
-        #header .mobile_menu #mob_menu .collapse ul {
-          margin: 0;
-          padding: 0;
-          list-style: none;
-          display: -webkit-box;
-          display: -webkit-flex;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-orient: vertical;
-          -webkit-box-direction: normal;
-          -webkit-flex-direction: column;
-              -ms-flex-direction: column;
-                  flex-direction: column;
-          -webkit-box-align: start;
-          -webkit-align-items: flex-start;
-              -ms-flex-align: start;
-                  align-items: flex-start;
-          padding: 10px; }
-          #header .mobile_menu #mob_menu .collapse ul li {
-            padding: 3px;
-            padding-left: 10px;
-            cursor: pointer;
-            width: 100%;
-            border-bottom: 1px dashed #fff; }
-            #header .mobile_menu #mob_menu .collapse ul li:hover {
-              background-color: #396B62;
-              -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-                      box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
-            #header .mobile_menu #mob_menu .collapse ul li a {
-              color: #fff;
-              display: block;
-              width: 100%;
-              text-decoration: none; }
-              #header .mobile_menu #mob_menu .collapse ul li a:hover {
-                color: yellow; }
+        #header .mobile_menu ul li span {
+          color: #fff; }
+          #header .mobile_menu ul li span:hover {
+            color: yellow; }
+        #header .mobile_menu ul li i {
+          color: #fff;
+          font-size: 22px; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
