--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -103,7 +103,7 @@
             padding-left: 3px;
           }
 
-          a {
+          & a {
             color: $white;
             text-decoration: none;
             font-size:18px;
@@ -130,7 +130,7 @@
             align-items: center;
             position: relative;
 
-            span {
+            & span {
               font-size:18px;
               @include shadow_text;
               cursor: pointer;
@@ -213,75 +213,50 @@
   .mobile_menu{
     background-color: lighten($grey,3%);
     width: 100%;
+    
+    & ul{
+      padding: 2px;
+      background-color: $white;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border-radius: 3px;
+      @include shadow_block;
 
-    #mob_menu{
-      padding: 10px;
-      border-radius: .3em;
-
-      .item{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        color: $white;
+      & li{
+        display: inline-block;
+        padding: 5px 15px;
         background-color: $green;
-        padding-left: 15px;
-        padding-top: 7px;
-        padding-bottom: 7px;
-        padding-right: 10px;
-        width: 100%;
         border-bottom: 1px dotted $white;
+        width: 100%;
         cursor: pointer;
         text-transform: uppercase;
-        font-size: 16px;
 
-        &:hover{
-          color: $yellow;
+        &:last-child{
+          border-bottom: none;
         }
 
-        a{
+        & a{
           display: block;
-          color:$white;
-          text-decoration: none;
           width: 100%;
+          color: $white;
+          text-decoration: none;
+
           &:hover{
             color: $yellow;
           }
         }
-      }
-      .collapse {
 
-        background-color: $green-light;
-        ul {
-          @include clear-list;
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          padding: 10px;
+        & span{
+          color: $white;
 
-          li{
-            padding: 3px;
-            padding-left: 10px;
-            cursor: pointer;
-            width: 100%;
-            border-bottom: 1px dashed $white;
-
-            &:hover {
-              background-color: $green;
-              @include shadow_block;
-
-            }
-
-            a{
-              color: $white;
-              display: block;
-              width: 100%;
-              text-decoration: none;
-              &:hover{
-                color: $yellow;
-              }
-
-            }
+          &:hover{
+            color: $yellow;
           }
+        }
+
+        & i{
+          color: $white;
+          font-size:22px;
         }
       }
     }
