--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -14,7 +14,7 @@
       color: $yellow;
     }
 
-    .menu_icon{
+    .menu_icon {
       display: flex;
       align-items: center;
       justify-content: flex-start;
@@ -47,12 +47,12 @@
         align-items: center;
         justify-content: center;
         padding-bottom: 2px;
-        @include devices-max-width-1200px{
+        @include devices-max-width-1200px {
           font-size: 20px;
           //height: 35px;
           //width: 35px;
         }
-        @include devices-max-width-992px{
+        @include devices-max-width-992px {
           font-size: 18px;
           //height: 30px;
           //width: 30px;
@@ -78,10 +78,10 @@
         display: flex;
         align-items: center;
         padding-left: 15px;
-        @include devices-max-width-1200px{
+        @include devices-max-width-1200px {
           padding-left: 10px;
         }
-        @include devices-max-width-992px{
+        @include devices-max-width-992px {
           padding-left: 5px;
         }
         //height: 40px;
@@ -92,10 +92,10 @@
           text-transform: uppercase;
           color: $white;
           display: flex;
-          @include devices-max-width-1200px{
+          @include devices-max-width-1200px {
             padding-right: 15px;
           }
-          @include devices-max-width-992px{
+          @include devices-max-width-992px {
             padding-right: 10px;
           }
 
@@ -106,13 +106,13 @@
           & a {
             color: $white;
             text-decoration: none;
-            font-size:18px;
+            font-size: 18px;
             @include shadow_text;
-            @include devices-max-width-1200px{
-              font-size:14px;
+            @include devices-max-width-1200px {
+              font-size: 14px;
             }
-            @include devices-max-width-992px{
-              font-size:12px;
+            @include devices-max-width-992px {
+              font-size: 12px;
             }
 
             &:hover, &.active {
@@ -131,15 +131,15 @@
             position: relative;
 
             & span {
-              font-size:18px;
+              font-size: 18px;
               @include shadow_text;
               cursor: pointer;
 
-              @include devices-max-width-1200px{
-                font-size:14px;
+              @include devices-max-width-1200px {
+                font-size: 14px;
               }
-              @include devices-max-width-992px{
-                font-size:12px;
+              @include devices-max-width-992px {
+                font-size: 12px;
               }
 
               &:hover {
@@ -150,10 +150,10 @@
             i {
               padding-left: 5px;
               font-size: 12px;
-              @include devices-max-width-1200px{
+              @include devices-max-width-1200px {
                 font-size: 10px;
               }
-              @include devices-max-width-992px{
+              @include devices-max-width-992px {
                 font-size: 8px;
               }
             }
@@ -210,11 +210,11 @@
       }
     }
   }
-  .mobile_menu{
-    background-color: lighten($grey,3%);
+  .mobile_menu {
+    background-color: lighten($grey, 3%);
     width: 100%;
-    
-    & ul{
+
+    & ul {
       padding: 2px;
       background-color: $white;
       margin-top: 10px;
@@ -222,8 +222,7 @@
       border-radius: 3px;
       @include shadow_block;
 
-      & li{
-        display: inline-block;
+      & li {
         padding: 5px 15px;
         background-color: $green;
         border-bottom: 1px dotted $white;
@@ -231,33 +230,47 @@
         cursor: pointer;
         text-transform: uppercase;
 
-        &:last-child{
+        &:last-child {
           border-bottom: none;
         }
 
-        & a{
+        & a {
           display: block;
           width: 100%;
           color: $white;
           text-decoration: none;
 
-          &:hover{
+          &:hover {
             color: $yellow;
           }
         }
 
-        & span{
-          color: $white;
+        .title {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
 
           &:hover{
             color: $yellow;
+
+            & span {
+              color: $yellow;
+            }
+
+            & i {
+              color: $yellow;
+            }
+          }
+
+          & span {
+            color: $white;
+          }
+          & i {
+            color: $white;
+            font-size: 22px;
           }
         }
 
-        & i{
-          color: $white;
-          font-size:22px;
-        }
       }
     }
   }
