--- a/src/css/main.css
+++ b/src/css/main.css
@@ -270,6 +270,17 @@ ul {
           #header .mobile_menu ul li .title i {
             color: #fff;
             font-size: 22px; }
+        #header .mobile_menu ul li ul {
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          background-color: #4EC698;
+          padding: 2px;
+          margin-top: 5px; }
+          #header .mobile_menu ul li ul li {
+            background-color: #4EC698; }
+            #header .mobile_menu ul li ul li a {
+              font-size: 12px; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
