--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -271,6 +271,22 @@
           }
         }
 
+        & ul {
+          @include clear-list;
+          background-color: $green-light;
+          padding: 2px;
+          margin-top: 5px;
+
+          & li{
+            background-color:$green-light;
+
+            & a{
+              font-size:12px;
+            }
+
+          }
+        }
+
       }
     }
   }
