--- a/src/css/main.css
+++ b/src/css/main.css
@@ -37,21 +37,29 @@ ul {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: start;
-      -webkit-justify-content: flex-start;
-          -ms-flex-pack: start;
-              justify-content: flex-start;
-      padding-top: 5px; }
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      padding-top: 5px;
+      height: 50px;
+      position: relative; }
       #header .navbar .menu_icon i {
         cursor: pointer;
         font-size: 24px;
         color: #fff;
         padding: 5px;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+      #header .navbar .menu_icon .run_string {
+        padding: 5px;
+        height: 50px;
+        color: #06fc23;
+        position: absolute;
+        top: 7px;
+        left: 50px;
+        width: 100%; }
+        #header .navbar .menu_icon .run_string span {
+          color: yellow; }
     #header .navbar .wrapper_nav {
       display: -webkit-box;
       display: -webkit-flex;
@@ -221,10 +229,13 @@ ul {
   #header .mobile_menu {
     background-color: #4a5054;
     width: 100%; }
+    #header .mobile_menu .search {
+      margin-top: 10px; }
     #header .mobile_menu .btn-success {
       background-color: #396B62; }
       #header .mobile_menu .btn-success:hover {
-        color: yellow; }
+        color: yellow;
+        border: 1px solid yellow; }
     #header .mobile_menu ul {
       padding: 2px;
       background-color: #fff;
