--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,33 +32,33 @@ ul {
             box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
     #header .navbar .active {
       color: yellow; }
-    #header .navbar .menu_icon {
+    #header .navbar .menu_icon .wrap_icon {
+      padding-top: 10px;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
-      padding-top: 5px;
-      height: 50px;
-      position: relative; }
-      #header .navbar .menu_icon i {
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: start;
+      -webkit-justify-content: flex-start;
+          -ms-flex-pack: start;
+              justify-content: flex-start; }
+      #header .navbar .menu_icon .wrap_icon i {
         cursor: pointer;
         font-size: 24px;
         color: #fff;
-        padding: 5px;
+        width: 30px;
+        height: 30px;
+        margin-left: 5px;
+        margin-right: 25px;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
-      #header .navbar .menu_icon .run_string {
-        padding: 5px;
-        height: 50px;
+      #header .navbar .menu_icon .wrap_icon .run_string {
         color: #06fc23;
-        position: absolute;
-        top: 7px;
-        left: 50px;
-        width: 100%; }
-        #header .navbar .menu_icon .run_string span {
+        height: 30px; }
+        #header .navbar .menu_icon .wrap_icon .run_string span {
           color: yellow; }
     #header .navbar .wrapper_nav {
       display: -webkit-box;
