--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,120 @@
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
+#header .header_content {
+  background-color: #4EC698;
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  #header .header_content .wrap_site_info {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 20px; }
+    #header .header_content .wrap_site_info h1 {
+      color: #fff;
+      font-size: 72px;
+      font-family: 'RobotoBold', sans-serif;
+      font-weight: bold;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+    #header .header_content .wrap_site_info .phone {
+      color: yellow;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+      #header .header_content .wrap_site_info .phone i {
+        font-size: 22px;
+        margin-right: 10px; }
+      #header .header_content .wrap_site_info .phone span {
+        font-size: 18px;
+        font-weight: bold; }
+  #header .header_content .wrap_slogan_info {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-top: 10px; }
+    #header .header_content .wrap_slogan_info h3 {
+      color: #fff;
+      font-size: 28px;
+      font-weight: bold;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+    #header .header_content .wrap_slogan_info span {
+      color: yellow;
+      margin-left: -180px;
+      margin-top: 7px;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+      font-size: 18px; }
+  #header .header_content .battons {
+    margin-top: 25px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+    #header .header_content .battons batton {
+      background-color: #396B62;
+      margin: 5px;
+      padding: 10px;
+      -webkit-border-radius: 3px;
+              border-radius: 3px;
+      color: #fff;
+      text-align: center;
+      display: block;
+      float: right;
+      cursor: pointer;
+      border: 1px solid #fff;
+      -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+              box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+      #header .header_content .battons batton i {
+        padding-right: 5px;
+        font-size: 18px; }
+
+/*==========  Desktop First Method  ==========*/
+/*==========  Mobile First Method  ==========*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 html, body {
   margin: 0;
@@ -59,7 +174,8 @@ ul {
         color: #06fc23;
         height: 30px; }
         #header .navbar .menu_icon .wrap_icon .run_string span {
-          color: yellow; }
+          color: yellow;
+          text-transform: uppercase; }
     #header .navbar .wrapper_nav {
       display: -webkit-box;
       display: -webkit-flex;
@@ -306,7 +422,7 @@ ul {
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
 #slider {
-  background-color: #4EC698; }
+  background-color: #396B62; }
   #slider .slider_wrapper {
     height: 300px;
     -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
