--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -69,11 +69,12 @@
       flex-direction: column;
       justify-content: flex-end;
 
-      batton {
-        //width: 200px;
+      a {
+        text-decoration: none;
+        font-size:20px;
         background-color: $green;
         margin: 5px;
-        padding: 10px;
+        padding: 7px;
         border-radius: 3px;
         color: $white;
         text-align: center;
@@ -84,9 +85,14 @@
         @include shadow_block;
         @include shadow_text;
 
+        &:hover{
+          color: $yellow;
+          border: 1px solid $yellow;
+        }
+
         i {
           padding-right: 5px;
-          font-size: 18px;
+          font-size: 22px;
         }
       }
     }
