--- a/src/css/main.css
+++ b/src/css/main.css
@@ -144,6 +144,7 @@
       float: right;
       cursor: pointer;
       border: 1px solid #fff;
+      width: 100%;
       -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
               box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
