--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,7 +170,8 @@
   #header .header_content .wrap_panel {
     display: block;
     background-color: #373b3e;
-    margin: 5px 15px;
+    margin: 10px 15px;
+    margin-top: -10px;
     padding: 5px;
     height: 40px;
     -webkit-border-radius: 3px;
@@ -178,6 +179,59 @@
     border: 1px solid #fff;
     -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
             box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+    @media only screen and (max-width: 1200px) {
+      #header .header_content .wrap_panel {
+        height: 35px; } }
+    #header .header_content .wrap_panel .search {
+      padding-left: 5px;
+      margin-right: -17px;
+      margin-top: -6px; }
+      #header .header_content .wrap_panel .search .input-group {
+        border: 1px solid yellow;
+        -webkit-border-radius: 3px;
+                border-radius: 3px;
+        position: relative; }
+        #header .header_content .wrap_panel .search .input-group i {
+          position: absolute;
+          left: 10px;
+          top: 5px;
+          z-index: 100;
+          color: #4EC698;
+          font-size: 24px; }
+          @media only screen and (max-width: 1200px) {
+            #header .header_content .wrap_panel .search .input-group i {
+              top: 3px;
+              font-size: 20px; } }
+        #header .header_content .wrap_panel .search .input-group input {
+          padding-left: 40px;
+          padding-top: 10px;
+          width: 100%;
+          height: 30px;
+          -webkit-border-bottom-left-radius: 3px;
+                  border-bottom-left-radius: 3px;
+          -webkit-border-top-left-radius: 3px;
+                  border-top-left-radius: 3px; }
+          @media only screen and (max-width: 1200px) {
+            #header .header_content .wrap_panel .search .input-group input {
+              height: 25px;
+              padding-left: 30px;
+              padding-top: 0px;
+              padding-bottom: 0px;
+              font-size: 14px; } }
+        #header .header_content .wrap_panel .search .input-group button {
+          height: 30px;
+          background-color: #4EC698;
+          -webkit-border-bottom-right-radius: 3px;
+                  border-bottom-right-radius: 3px;
+          -webkit-border-top-right-radius: 3px;
+                  border-top-right-radius: 3px; }
+          @media only screen and (max-width: 1200px) {
+            #header .header_content .wrap_panel .search .input-group button {
+              height: 25px;
+              padding-top: 3px; } }
+          #header .header_content .wrap_panel .search .input-group button:hover {
+            color: yellow;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
