--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -152,12 +152,73 @@
     .wrap_panel{
       display: block;
       background-color: darken($grey,5%);
-      margin: 5px 15px;
+      margin: 10px 15px;
+      margin-top: -10px;
       padding: 5px;
       height: 40px;
       border-radius: 3px;
       border: 1px solid $white;
       @include shadow_block;
+      @include devices-max-width-1200px{
+        height: 35px;
+      }
+
+      .search{
+        padding-left: 5px;
+        margin-right: -17px;
+        margin-top: -6px;
+
+        .input-group{
+          border: 1px solid $yellow;
+          border-radius: 3px;
+          position: relative;
+
+          i {
+            position: absolute;
+            left: 10px;
+            top: 5px;
+            z-index: 100;
+            color: $green-light;
+            font-size: 24px;
+            @include devices-max-width-1200px{
+              top: 3px;
+              font-size: 20px;
+            }
+          }
+
+          input{
+            padding-left: 40px;
+            padding-top: 10px;
+            width: 100%;
+            height: 30px;
+            border-bottom-left-radius: 3px;
+            border-top-left-radius: 3px;
+            @include devices-max-width-1200px{
+              height: 25px;
+              padding-left: 30px;
+              padding-top: 0px;
+              padding-bottom: 0px;
+              font-size: 14px;
+            }
+
+          }
+          button{
+            height: 30px;
+            background-color:$green-light;
+            border-bottom-right-radius: 3px;
+            border-top-right-radius: 3px;
+            @include devices-max-width-1200px{
+              height: 25px;
+              padding-top: 3px;
+            }
+
+            &:hover{
+              color: $yellow;
+              @include shadow_text;
+            }
+          }
+        }
+      }
     }
   }
 
