--- a/src/css/main.css
+++ b/src/css/main.css
@@ -232,6 +232,38 @@
           #header .header_content .wrap_panel .search .input-group button:hover {
             color: yellow;
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+    #header .header_content .wrap_panel .wrap_run_str {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      height: 40px;
+      margin-top: -8px; }
+      @media only screen and (max-width: 1200px) {
+        #header .header_content .wrap_panel .wrap_run_str {
+          margin-top: -11px; } }
+      #header .header_content .wrap_panel .wrap_run_str .icons {
+        color: #fff;
+        margin-right: 10px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin-left: -10px; }
+        #header .header_content .wrap_panel .wrap_run_str .icons .sm {
+          margin-right: -7px; }
+        #header .header_content .wrap_panel .wrap_run_str .icons .fa-2x {
+          color: #4EC698; }
+        #header .header_content .wrap_panel .wrap_run_str .icons .fa-lg {
+          margin-left: -6px; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
