--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -15,6 +15,10 @@
       flex-direction: column;
       align-items: center;
       padding-bottom: 20px;
+      @include devices-max-width-768px{
+        padding-bottom: 0px;
+        margin-top: -10px;
+      }
 
       h1 {
         color: $white;
@@ -81,6 +85,11 @@
           padding-top: 0px;
           margin-top: 15px;
         }
+        @include devices-max-width-768px{
+          margin-top: 0px;
+          text-align: center;
+          font-size: 20px;
+        }
       }
       span{
         color: $yellow;
@@ -97,6 +106,10 @@
         @include devices-max-width-992px{
           margin-left: 0px;
         }
+        @include devices-max-width-768px{
+          text-align: center;
+          font-size: 14px;
+        }
       }
     }
 
@@ -105,6 +118,9 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
+      @include devices-max-width-768px{
+        margin-top: 5px;
+      }
 
       a {
         text-decoration: none;
