Изменён цвет кнопки поиска

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -236,7 +236,7 @@
               font-size: 14px; } }
         #header .header_content .wrap_panel .search .input-group button {
           height: 30px;
-          background-color: #4EC698;
+          background-color: #396B62;
           -webkit-border-bottom-right-radius: 3px;
                   border-bottom-right-radius: 3px;
           -webkit-border-top-right-radius: 3px;
