--- a/src/css/main.css
+++ b/src/css/main.css
@@ -160,7 +160,7 @@
       float: right;
       cursor: pointer;
       border: 1px solid #fff;
-      width: 100%;
+      width: 75%;
       -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
               box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
@@ -173,7 +173,8 @@
         #header .header_content .battons a {
           font-size: 16px;
           margin: 3px;
-          padding: 5px; } }
+          padding: 5px;
+          width: 100%; } }
       #header .header_content .battons a:hover {
         color: yellow;
         border: 1px solid yellow; }
