--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -4,9 +4,24 @@
 
 #slider {
   background-color: $green;
+
   .slider_wrapper{
-    height: 300px;
+    height: 180px;
+    background-color:$white;
+    border: 3px solid $green-light;
+    border-radius: 3px;
+    padding: 10px;
     @include shadow_block;
+
+    .item{
+      width: 250px;
+      height: 180px;
+
+      img {
+        width: 220px;
+        height: 150px;
+      }
+    }
   }
 
 }
