--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -6,6 +6,7 @@
   background-color: $green;
 
   .slider_wrapper{
+    position: relative;
     height: 180px;
     background-color:$white;
     border: 3px solid $green-light;
@@ -20,6 +21,69 @@
       img {
         width: 220px;
         height: 150px;
+      }
+    }
+    .owl-controls{
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      z-index:100;
+      width: 100%;
+
+      .owl-nav{
+        position: relative;
+        width: 100%;
+        height: 100%;
+
+        .owl-prev{
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          width: 40px;
+          height: 174px;
+          //background-color:$green-light;
+          background-image: linear-gradient(to left, rgba(78, 198, 152, 0.5) 100%, rgba(0, 0, 0, 0) 0px);
+          opacity: .5;
+
+          &:hover{
+            i{
+              color: $yellow;
+              @include shadow_text;
+            }
+          }
+
+          i{
+            position: absolute;
+            top: 70px;
+            left: 0px;
+            z-index: 101;
+          }
+        }
+
+        .owl-next{
+          position: absolute;
+          top: 0px;
+          right: 0px;
+          width: 40px;
+          height: 174px;
+          //background-color: $green-light;
+          background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(78, 198, 152, 0.5) 100%);
+          opacity: .5;
+
+          &:hover{
+            i{
+              color: $yellow;
+              @include shadow_text;
+            }
+          }
+
+          i{
+            position: absolute;
+            top: 70px;
+            right: 0px;
+            z-index: 101;
+          }
+        }
       }
     }
   }
