--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -13,6 +13,11 @@
     border-radius: 3px;
     padding: 10px;
     @include shadow_block;
+    overflow: hidden;
+
+    .owl-carousel{
+      margin-left: 25px;
+    }
 
     .item{
       width: 250px;
@@ -42,8 +47,8 @@
           width: 40px;
           height: 174px;
           //background-color:$green-light;
-          background-image: linear-gradient(to left, rgba(78, 198, 152, 0.5) 100%, rgba(0, 0, 0, 0) 0px);
-          opacity: .5;
+          background-image: linear-gradient(to left,rgba(0, 0, 0, 0) 0px, rgba(78, 198, 152, 0.5) 100%);
+          //opacity: .5;
 
           &:hover{
             i{
@@ -57,6 +62,7 @@
             top: 70px;
             left: 0px;
             z-index: 101;
+            color: $green-light;
           }
         }
 
@@ -68,7 +74,7 @@
           height: 174px;
           //background-color: $green-light;
           background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(78, 198, 152, 0.5) 100%);
-          opacity: .5;
+          //opacity: .5;
 
           &:hover{
             i{
@@ -82,6 +88,7 @@
             top: 70px;
             right: 0px;
             z-index: 101;
+            color: $green-light;
           }
         }
       }
