--- a/src/css/main.css
+++ b/src/css/main.css
@@ -610,8 +610,25 @@ ul {
     -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
             box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
     overflow: hidden; }
+    @media only screen and (max-width: 768px) {
+      #slider .slider_wrapper {
+        margin-left: -15px;
+        margin-right: -15px; } }
     #slider .slider_wrapper .owl-carousel {
-      margin-left: 25px; }
+      margin-left: 25px;
+      margin-top: 4px; }
+      @media only screen and (max-width: 1200px) {
+        #slider .slider_wrapper .owl-carousel {
+          margin-left: 40px; } }
+      @media only screen and (max-width: 992px) {
+        #slider .slider_wrapper .owl-carousel {
+          margin-left: 62px; } }
+      @media only screen and (max-width: 480px) {
+        #slider .slider_wrapper .owl-carousel {
+          margin-left: 120px; } }
+      @media only screen and (max-width: 320px) {
+        #slider .slider_wrapper .owl-carousel {
+          margin-left: 40px; } }
     #slider .slider_wrapper .item {
       width: 250px;
       height: 180px; }
