--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -14,9 +14,27 @@
     padding: 10px;
     @include shadow_block;
     overflow: hidden;
+    @include devices-max-width-768px{
+      margin-left: -15px;
+      margin-right: -15px;
+    }
 
     .owl-carousel{
       margin-left: 25px;
+      margin-top: 4px;
+
+      @include devices-max-width-1200px{
+        margin-left: 40px;
+      }
+      @include devices-max-width-992px{
+        margin-left: 62px;
+      }
+      @include devices-max-width-480px{
+        margin-left: 120px;
+      }
+      @include devices-max-width-320px{
+        margin-left: 40px;
+      }
     }
 
     .item{
