--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -64,6 +64,7 @@
           left: 0px;
           width: 40px;
           height: 174px;
+          cursor: pointer;
           //background-color:$green-light;
           background-image: linear-gradient(to left,rgba(0, 0, 0, 0) 0px, rgba(78, 198, 152, 0.5) 100%);
           //opacity: .5;
@@ -90,6 +91,7 @@
           right: 0px;
           width: 40px;
           height: 174px;
+          cursor: pointer;
           //background-color: $green-light;
           background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(78, 198, 152, 0.5) 100%);
           //opacity: .5;
