--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -14,6 +14,7 @@
     padding: 10px;
     @include shadow_block;
     overflow: hidden;
+    margin-bottom: 10px;
     @include devices-max-width-768px{
       margin-left: -15px;
       margin-right: -15px;
