--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -1,3 +1,25 @@
 @import "partitions/variables";
 @import "partitions/mixins";
 @import "partitions/media";
+
+#news{
+  background-color:$green;
+
+  .wrap_news{
+    @include clear;
+    border: 3px solid $green-light;
+    border-radius: 3px;
+    background-color: $white;
+    padding: 10px;
+    height: 400px;
+
+    h1{
+      @include clear;
+      color: $green-light;
+      font-size: 24px;
+      padding: 5px 15px;
+      font-family: 'RobotoRegular', sans-serif;
+      text-transform: uppercase;
+    }
+  }
+}
